Use fontawesome with jsdelivr cdn.

--- a/themes/whiteplain/layouts/partials/head.html
+++ b/themes/whiteplain/layouts/partials/head.html
@@ -44,6 +44,6 @@
   <link rel="stylesheet" href="{{ "css/syntax.css" | relURL }}" media="all" />
   <link rel="stylesheet" href="{{ "css/custom.css" | relURL }}" media="all" />
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.1.0/js/all.js"></script>
   {{ if .Params.mathjax }}{{ partial "mathjax_support.html" . }}{{ end }}
 </head>
