--- a/themes/whiteplain/layouts/partials/post_meta.html
+++ b/themes/whiteplain/layouts/partials/post_meta.html
@@ -1,5 +1,5 @@
 <ul class="article-meta">
-  <li class="article-meta-date"><time>{{ .Date.Format (default "January 2, 2006" $.Site.Params.dateFormat) }}</time></li>
+  <li class="article-meta-date"><i class="fas fa-calendar"></i> <time>{{ .Date.Format (default "January 2, 2006" $.Site.Params.dateFormat) }}</time></li>
   {{- if .Params.categories }}
   {{- range .Params.categories }}
   <li class="article-meta-categories">
