--- a/themes/whiteplain/layouts/partials/toc.html
+++ b/themes/whiteplain/layouts/partials/toc.html
@@ -1,6 +1,7 @@
 
 {{- if or .Params.toc (and (gt .WordCount 400 ) (ne .Params.toc "false")) }}
 <aside class="toc">
+  <b>Contents:</b>
   {{ .TableOfContents }}
 </aside>
 {{- end }}
