--- a/themes/whiteplain/layouts/_default/category.terms.html
+++ b/themes/whiteplain/layouts/_default/category.terms.html
@@ -5,12 +5,12 @@
     {{ $data.Plural | humanize }}
   </div>
   <div class="main" role="main">
-    <section class="terms">
+    <h2>Total {{ len .Data.Terms }} categories</h2>
+    <section class="terms-category">
       <ul>
         {{- range .Data.Terms.Alphabetical }}
         <li>
           <a href="{{ "/" | relURL }}{{ $data.Plural | urlize }}/{{ .Name | urlize }}/">{{ .Name | humanize }}({{ .Count }})</a>
-          <time>{{((index .Pages.ByDate.Reverse 0).Date.Format (default "January 2, 2006" $.Site.Params.dateFormat))}}</time>
         </li>
         {{- end}}
       </ul>
