--- a/themes/whiteplain/layouts/partials/header.html
+++ b/themes/whiteplain/layouts/partials/header.html
@@ -1,13 +1,12 @@
 
 <header class="site-header">
+  <nav class="site-navi">
     <h1 class="site-title"><a href="{{ "/" | relURL }}">{{ .Site.Title }}</a></h1>
-    <nav class="site-nav">
-      <ul>
-        <li class="current"><a href="{{ "/" | relURL }}">Menu</a></li>
-        {{- range .Site.Menus.main }}
-        <li><a href="{{ .URL | safeURL }}" title="{{ .Name }}">{{ .Name }}</a></li>
-        {{- end }}
-      </ul>
-    </nav>
+    <ul class="site-navi-items">
+      {{- range .Site.Menus.main }}
+      <li class="site-navi-item-{{ .Identifier }}"><a href="{{ .URL | safeURL }}" title="{{ .Name }}">{{ .Name }}</a></li>
+      {{- end }}
+    </ul>
+  </nav>
 </header>
 <hr class="site-header-bottom">
