--- a/themes/whiteplain/static/css/style.css
+++ b/themes/whiteplain/static/css/style.css
@@ -464,7 +464,7 @@ blockquote blockquote blockquote blockquote {
 }
 .terms-category > ul {
   margin: 0;
-  padding: 0;
+  padding: 0 20px 0 20px;
 }
 .terms-category > ul > li {
   padding: 0 0 3px 0;
@@ -489,6 +489,7 @@ blockquote blockquote blockquote blockquote {
 
 .terms-tag {
 	margin-bottom: 25px;
+	padding: 0 20px 0 20px;
 	overflow: hidden;
 }
 
