--- a/themes/whiteplain/layouts/partials/post_nav.html
+++ b/themes/whiteplain/layouts/partials/post_nav.html
@@ -1,12 +1,12 @@
-<ul class="pager article-pager">
-  {{- if .NextInSection }}
-  <li class="pager-newer">
-      <a href="{{ .NextInSection.Permalink | relURL }}" data-toggle="tooltip" data-placement="top" title="{{ .NextInSection.Title }}">&lt; {{ .NextInSection.Title }}</a>
+<ul class="post-nav article-pager">
+  {{ with .PrevInSection }}
+  <li>
+      <a href="{{.Permalink}}">&lt; {{ .Title }}</a>
   </li>
-  {{- end }}
-  {{- if .PrevInSection }}
-  <li class="pager-older">
-    <a href="{{ .PrevInSection.Permalink | relURL }}" data-toggle="tooltip" data-placement="top" title="{{ .PrevInSection.Title }}">{{ .PrevInSection.Title }} &gt;</a>
+  {{ end }}
+  {{ with .NextInSection }}
+  <li>
+      <a href="{{.Permalink}}">{{ .Title }} &gt;</a>
   </li>
-  {{- end }}
+  {{ end }}
 </ul>
