--- a/themes/minos/layouts/section/about.html
+++ b/themes/minos/layouts/section/about.html
@@ -1,6 +1,8 @@
 
 {{ define "main" }}
   <section id="main" class="outer">
+    <article class="about">
       {{ .Content }}
+    </article>
   </section>
 {{ end }}
