--- a/themes/minos/layouts/section/guestbook.html
+++ b/themes/minos/layouts/section/guestbook.html
@@ -1,7 +1,9 @@
 
 {{ define "main" }}
   <section id="main" class="outer">
-    {{ .Content }}
+    <article class="guestbook">
+      {{ .Content }}
+    </article>
     {{ partial "comments.html" . }}
   </section>
 {{ end }}
