--- a/themes/minos/static/css/style.css
+++ b/themes/minos/static/css/style.css
@@ -111,7 +111,7 @@ body {
   -webkit-text-size-adjust: 100%;
 }
 .outer {
-  max-width: 1080px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 .outer:before,
@@ -1084,4 +1084,14 @@ pre .php .xml {
   font-size: 16px;
   font-family: 'PT Serif', 'STZhongsong', '华文中宋', 'Microsoft Yahei', serif;
   text-shadow: 1px 3px 3px rgba(0,0,0,0.5);
+}
+
+.guestbook {
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+.about {
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
