Fix article nav position.

--- a/themes/minos/layouts/partials/nav.html
+++ b/themes/minos/layouts/partials/nav.html
@@ -1,14 +1,12 @@
 <nav id="article-nav">
     {{ if .Prev }}
     <a href="{{ .Prev.RelPermalink }}" id="article-nav-newer" class="article-nav-link-wrap">
-        <div class="article-nav-title"><span>&lt;</span>&nbsp;
-            {{ .Prev.Title }}
-        </div>
+        <div class="article-nav-title">{{ .Prev.Title }}&nbsp;<span>&gt;</span></div>
     </a>
     {{ end }}
     {{ if .Next }}
     <a href="{{ .Next.RelPermalink }}" id="article-nav-older" class="article-nav-link-wrap">
-        <div class="article-nav-title">{{ .Next.Title  }}&nbsp;<span>&gt;</span></div>
+        <div class="article-nav-title"><span>&lt;</span>&nbsp;{{ .Next.Title  }}</div>
     </a>
     {{ end }}
 </nav>
