Fix mathjax support.

--- a/themes/minos/layouts/partials/head.html
+++ b/themes/minos/layouts/partials/head.html
@@ -15,7 +15,7 @@
     <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.12.0/build/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     
-    
+    {{ if .Params.mathjax }}{{ partial "mathjax_support.html" . }}{{ end }}
 
     {{ .Hugo.Generator }}
 </head>
