--- a/themes/minos/layouts/partials/article.html
+++ b/themes/minos/layouts/partials/article.html
@@ -42,7 +42,7 @@
         {{ end }}
 
         {{ if .Site.Params.SmartToc }}
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.slim.min.js" integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.slim.min.js"></script>
         <script>
             (function() {
                 var $toc = $('#TableOfContents');
