--- a/themes/minos/layouts/partials/head.html
+++ b/themes/minos/layouts/partials/head.html
@@ -15,6 +15,8 @@
     <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.12.0/build/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.1.0/css/all.css">
+    
     {{ if .Params.mathjax }}{{ partial "mathjax_support.html" . }}{{ end }}
 
     {{ .Hugo.Generator }}
