--- a/themes/minos/layouts/partials/head.html
+++ b/themes/minos/layouts/partials/head.html
@@ -15,7 +15,7 @@
     <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.12.0/build/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
     
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.1.0/css/all.css">
+    <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.1.0/js/all.js"></script>
     
     {{ if .Params.mathjax }}{{ partial "mathjax_support.html" . }}{{ end }}
 
