--- a/themes/minos/layouts/partials/head.html
+++ b/themes/minos/layouts/partials/head.html
@@ -9,11 +9,14 @@
     <link rel="shortcut icon" href="/favicon.png">
 
     <link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css">
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css">
     
+    <!--
     <link rel="stylesheet"
       href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.12.0/build/styles/monokai.min.css">
     <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.12.0/build/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
+    -->
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.1.0/css/all.css">
     
