Add archives page.

--- a/themes/minos/layouts/taxonomy/tag.html
+++ b/themes/minos/layouts/taxonomy/tag.html
@@ -8,7 +8,8 @@
                 {{ range .Paginator.Pages }}
                 {{ partial "li.html" . }}
                 {{ end }}
-            </div></section>
+            </div>
+        </section>
         {{ partial "pagination.html" . }}
     </section>
 {{ end }}
