--- a/themes/minos/static/css/style.css
+++ b/themes/minos/static/css/style.css
@@ -495,12 +495,15 @@ a.article-title:hover,
 }
 .article-entry th {
   font-weight: 600;
-  border-bottom: 3px solid #ddd;
-  padding-bottom: 0.5em;
+  border-top: 1px solid gray;
+  border-left: 1px solid gray;
+  border-right: 1px solid gray;
+  border-bottom: 2px solid gray;
+  padding: 10px 4px;
 }
 .article-entry td {
-  border-bottom: 1px solid #ddd;
-  padding: 10px 0;
+  border: 1px solid gray;
+  padding: 10px 4px;
 }
 .article-entry blockquote {
   font-family: 'Helvetica Neue', 'Helvetica', 'Source Han Serif SC', 'Source Han Serif CN', 'Source Han Serif', 'Microsoft Yahei', sans-serif;
