--- a/themes/minos/layouts/partials/article.html
+++ b/themes/minos/layouts/partials/article.html
@@ -81,6 +81,7 @@
         </script>
         {{ end }}
 
+        {{ partial "related.html" . }}
 
         {{ if .Params.tags }}
         <footer class="article-footer">
