--- a/themes/minos/layouts/partials/comments.html
+++ b/themes/minos/layouts/partials/comments.html
@@ -1,10 +1,9 @@
 {{- if and .Site.Params.valine.enable (or (not (isset .Params "comments")) (eq .Params.comments nil) .Params.comments) }}
   <div class="article-comments">
   <!-- id 将作为查询条件 -->
-  <span id="{{ .URL }}" class="leancloud_visitors" data-flag-title="{{ .Title }}">
+  <span id="{{ .URL }}" class="leancloud-visitors" data-flag-title="{{ .Title }}">
     <span class="post-meta-item-text">文章阅读量 </span>
     <span class="leancloud-visitors-count">0</span>
-    <p></p>
   </span>
   <div id="vcomments"></div>
   <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
