--- a/themes/minos/layouts/partials/article.html
+++ b/themes/minos/layouts/partials/article.html
@@ -7,7 +7,6 @@
         {{ end }}
         <div class="article-meta">
             <div class="article-date">
-                <i class="fas fa-calendar-alt"></i>
                 <a href="{{ .RelPermalink }}" >
                     <time datetime='{{ .Date.Format "2006-01-02T15:04:05.000-07:00" }}' itemprop="datePublished">{{ .Date.Format "2006-01-02" }}</time>
                 </a>
@@ -19,10 +18,9 @@
             {{ if .Params.categories }}
             <div class="post-categories">
                 <div class="article-category">
-                    <i class="fas fa-folder-open"></i>
                     {{ range $i, $e := .Params.categories }}
                     {{ if gt $i 0 }}
-                    <span>&sbquo;</span>
+                    <span>&gt;</span>
                     {{ end }}
                     <a class="article-category-link" href="{{ $Site.BaseURL }}/categories/{{ $e | urlize }}">{{ $e }}</a>
                     {{ end }}
@@ -97,7 +95,7 @@
             <ul class="article-tag-list">
                 {{ range .Params.tags }}
                 <li class="article-tag-list-item">
-                    <a class="article-tag-list-link" href="{{ $Site.BaseURL}}/tags/{{ . | urlize }}"><i class="fas fa-tag"></i>{{ . }}
+                    <a class="article-tag-list-link" href="{{ $Site.BaseURL}}/tags/{{ . | urlize }}">{{ . }}
                     </a>
                 </li>
                 {{ end }}
