--- a/themes/minos/layouts/partials/footer.html
+++ b/themes/minos/layouts/partials/footer.html
@@ -20,9 +20,10 @@
             }
         });
     </script>
-
+    
+    <!--
 	<script type="text/javascript" size="90" alpha='0.6' zIndex="-1" src="{{ .Site.BaseURL }}/js/ribbon.min.js"></script>
-	<!--
-	<script type="text/javascript" color="0,0,255" opacity='0.7' zIndex="-2" count="99" src="{{ .Site.BaseURL }}/js/canvas-nest.js"></script>
 	-->
+	<script type="text/javascript" src="{{ .Site.BaseURL }}/js/canvas-nest.js"></script>
+	
 </footer>
