Upgrade fontawesome to 5.11.2

--- a/themes/minos/layouts/partials/head.html
+++ b/themes/minos/layouts/partials/head.html
@@ -18,7 +18,7 @@
     <script>hljs.initHighlightingOnLoad();</script>
     -->
     
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.6.1/css/all.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.11.2/css/all.min.css">
     
     {{ if .Params.mathjax }}{{ partial "mathjax_support.html" . }}{{ end }}
 
