--- a/themes/minos/layouts/partials/head.html
+++ b/themes/minos/layouts/partials/head.html
@@ -5,7 +5,7 @@
     {{ partial "meta.html" . }}
     {{ partial "og.html" . }}
 
-    <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+    <link href="{{ with .OutputFormats.Get "RSS" }}{{ .Permalink }}{{ end }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
     <link rel="shortcut icon" href="/favicon.png">
 
     <link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css">
@@ -22,5 +22,5 @@
     
     {{ if .Params.mathjax }}{{ partial "mathjax_support.html" . }}{{ end }}
 
-    {{ .Hugo.Generator }}
+    {{ hugo.Generator }}
 </head>
