--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,25 +1,18 @@
 {{- /* Comments area start */ -}}
-<div class="article-comments">
-    <!-- id 将作为查询条件 -->
-    <span id="{{ .RelPermalink }}" class="leancloud-visitors" data-flag-title="{{ .Title }}">
-      <span class="post-meta-item-text">文章阅读量 </span>
-      <span class="leancloud-visitors-count">0</span>
-    </span>
-    <div id="vcomments"></div>
-    <!-- <script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
-    <script src='//cdn.jsdelivr.net/npm/valine/dist/Valine.min.js'></script> -->
-    <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
-    <script type="text/javascript">
-      new Valine({
-          el: '#vcomments' ,
-          appId: '{{ .Site.Params.valine.appId }}',
-          appKey: '{{ .Site.Params.valine.appKey }}',
-          notify: '{{ .Site.Params.valine.notify }}', 
-          verify: '{{ .Site.Params.valine.verify }}', 
-          avatar:'{{ .Site.Params.valine.avatar }}', 
-          placeholder: '{{ .Site.Params.valine.placeholder }}',
-          visitor: '{{ .Site.Params.valine.visitor }}'
-      });
-    </script>
-</div>
+<script src="https://giscus.app/client.js"
+  data-repo="xuchengpeng/xuchengpeng.github.io"
+  data-repo-id="MDEwOlJlcG9zaXRvcnkxNDA1MzI1NTA="
+  data-category="Comments"
+  data-category-id="DIC_kwDOCGBbRs4CUv2b"
+  data-mapping="pathname"
+  data-strict="0"
+  data-reactions-enabled="1"
+  data-emit-metadata="0"
+  data-input-position="bottom"
+  data-theme="preferred_color_scheme"
+  data-lang="zh-CN"
+  data-loading="lazy"
+  crossorigin="anonymous"
+  async>
+</script>
 {{- /* Comments area end */ -}}
