--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,18 +1,18 @@
 {{- /* Comments area start */ -}}
 <script src="https://giscus.app/client.js"
-  data-repo="xuchengpeng/xuchengpeng.github.io"
-  data-repo-id="MDEwOlJlcG9zaXRvcnkxNDA1MzI1NTA="
-  data-category="Comments"
-  data-category-id="DIC_kwDOCGBbRs4CUv2b"
-  data-mapping="pathname"
-  data-strict="0"
-  data-reactions-enabled="1"
-  data-emit-metadata="0"
-  data-input-position="bottom"
-  data-theme="preferred_color_scheme"
-  data-lang="zh-CN"
-  data-loading="lazy"
-  crossorigin="anonymous"
-  async>
+        data-repo="xuchengpeng/hugo-blog"
+        data-repo-id="MDEwOlJlcG9zaXRvcnkxNDA1MzI1NTA="
+        data-category="Comments"
+        data-category-id="DIC_kwDOCGBbRs4CUv2b"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
 </script>
 {{- /* Comments area end */ -}}
